# BluePill_Test

./: Build_and_Run.bat  Build_and_Run.sh  CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core/Inc/: nrf24l01p_improved.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Src/: main.c  nrf24l01p_improved.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
Drivers/: CMakeLists.txt
cmake_config/: cmake_init.cmake  gcc-arm-none-eabi.cmake
mcu_config_init/: CMakeLists.txt
